--- a/VRChat/88/1032588.html
+++ b/VRChat/88/1032588.html
@@ -77,9 +77,9 @@
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <div class="page-wrap">
       <main role="main">
-        <div class="market-item-detail" data-product-brand=
-        "m-hatsuka" data-product-category="127" data-product-id=
-        "1032588" data-product-list="market_show"
+        <div class="market-item-detail u-bg-white"
+        data-product-brand="m-hatsuka" data-product-category="127"
+        data-product-id="1032588" data-product-list="market_show"
         data-product-price="0" data-tracking="detail_item">
           <nav>
             <div class="breadcrumbs u-border-b u-border-100">
@@ -103,17 +103,17 @@
             </div>
           </nav>
           <article>
-            <div class="market-item-detail-article">
+            <div class=
+            "market-item-detail-article u-d-flex u-flex-column u-align-items-center u-pb-600 u-bg-white">
               <div class=
               "market-item-detail__exhibition-banner container">
               </div>
-              <div class="market-item-detail-article__body">
+              <div class="u-bg-white u-pt-600 u-px-700">
                 <div class="container">
-                  <div class="lo-grid">
-                    <div class="flex-order-summary">
+                  <div class="u-d-flex">
+                    <div class="u-order-1 l-col-2of5 u-pl-600">
                       <header>
-                        <div class=
-                        "flex-order-summary-shop_name-field">
+                        <div class="u-my-200 u-tpg-title3">
                           <a class="nav" target="_blank"
                           data-product-list=
                           "from market_show via market_item_detail to shop_index"
@@ -124,13 +124,13 @@
                             <img alt="睦月雑貨店" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/3669967/icon_image/e380cd18-4ad8-4e45-80b1-0c3bd2b6b315_base_resized.jpg">
-                            <div class=
-                            "flex-order-summary-shop_name">
+                            <div class="u-text-ellipsis">
                               睦月雑貨店
                             </div>
                           </div></a>
                         </div>
-                        <h2 class="item-summary__item-name">
+                        <h2 class=
+                        "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
                           体操服シャツ（女子用）
                         </h2>
                         <div class="item-summary__caption"></div>
@@ -202,17 +202,16 @@
                         </ul>
                       </section>
                       <section>
-                        <div class="share-btns">
-                          <div class="social-btn twitter">
-                            <a data-url=
-                            "https://booth.pm/ja/items/1032588"
-                            data-lang="ja" data-hashtags="booth_pm"
-                            data-text="体操服シャツ（女子用） | 睦月雑貨店"
-                            data-count="none" class=
-                            "twitter-share-button" href=
-                            "https://twitter.com/share">ツイート</a>
-                          </div>
-                          <div class="social-btn facebook">
+                        <div class=
+                        "share-btns u-d-flex u-flex-1 u-align-items-center u-justify-content-start u-px-200 u-py-400">
+                          <a data-url=
+                          "https://booth.pm/ja/items/1032588"
+                          data-lang="ja" data-hashtags="booth_pm"
+                          data-text="体操服シャツ（女子用） | 睦月雑貨店"
+                          data-count="none" class=
+                          "twitter-share-button" href=
+                          "https://twitter.com/share">ツイート</a>
+                          <div class="u-ml-300">
                             <div class="fb-like" data-action="like"
                             data-href=
                             "https://booth.pm/ja/items/1032588"
@@ -222,7 +221,7 @@
                         </div>
                       </section>
                     </div>
-                    <div class="flex-order-body">
+                    <div class="u-order-0 l-col-3of5 u-pr-500">
                       <div class="primary-image-area">
                         <div>
                           <div class=
@@ -255,8 +254,8 @@
                       </div>
                       <section>
                         <div class=
-                        "market-item-detail-description">
-                          <p class="autolink">
+                        "js-market-item-detail-description">
+                          <p class="autolink u-text-wrap">
                             とてもシンプルな体操服のシャツのモデルです。
                             ボーン入り、ウエイト設定済みとなってます。Unityでの設定の仕方が分かればすぐに使用できます。
                             ランニングシューズと合わせていかがでしょうか。 注意事項 ・.fbx
@@ -267,8 +266,7 @@
                         </div>
                       </section>
                       <section>
-                        <div class=
-                        "market-item-detail-module page_design" id=
+                        <div class="u-text-wrap page_design" id=
                         "modules"></div>
                       </section>
                     </div>
